# metrorider

./: .gitignore  HaskellGameJamTemplate.cabal  README.md  cabal.project  unix_setup.sh  win_setup.bat
.github/workflows/: windows-ci.yaml
src/: Game.hs  Main.hs
